welcome.lessons.welcome.loopfor.LoopCourse.scala.error
Runner:2: error: not found: value b
for(i<-1 to 10){b
                ^